Add face regovation

--- a/app/.env
+++ b/app/.env
@@ -31,3 +31,8 @@ APP_CONFIG__JWT__ALGORITHM=HS256
 APP_CONFIG__ADMIN__USERNAME=admin
 APP_CONFIG__ADMIN__PASSWORD=admin123
 APP_CONFIG__ADMIN__NAME=admin
+
+
+
+APP_CONFIG__FILE_URL__HTTP=http://localhost:8080
+APP_CONFIG__FILE_URL__UPLOAD_DIR=app/uploads
