--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,7 @@ services:
       - "8000:8000"
     volumes:
       - ./app:/app/app
+      - ./app/uploads:/app/app/uploads 
 
 volumes:
   postgres_data:
