--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,11 +3,12 @@ name = "face-test"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.14"
+requires-python = ">=3.12"
 dependencies = [
     "alembic>=1.17.2",
     "asyncpg>=0.31.0",
     "bcrypt<4.0",
+    "deepface>=0.0.96",
     "fastapi>=0.124.4",
     "openpyxl>=3.1.5",
     "pandas>=2.3.3",
@@ -16,5 +17,6 @@ dependencies = [
     "pyjwt>=2.10.1",
     "python-multipart>=0.0.21",
     "sqlalchemy>=2.0.45",
+    "tf-keras>=2.20.1",
     "uvicorn>=0.38.0",
 ]
