--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ services:
   app:
     build: .
     container_name: face_test_app
-    restart: unless-stopped  # Changed from 'always'
+    # restart: unless-stopped  # Changed from 'always'
     environment:
       DATABASE_URL: postgresql+asyncpg://${POSTGRES_USER}:${POSTGRES_PASSWORD}@database:5432/${POSTGRES_DB}
       PYTHONUNBUFFERED: 1
